--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <title>Тестовая страничка</title>
 </head>
-<>
-  <img src="../img/img1.png"/>
-  <img src="../img/img2.png"/>
+<body>
   <h1>
       kennedy
-  </h1> 
-  <p>
-    мякярайнен
-  </p>
+    
+  </h1>  
 </body>
 </html>
       
