--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <img src="../../img/img1.png"/>
-  <img src="/my-project/img/img2.png"/>
+  <img src="https://github.com/igamilton/my-project/blob/main/img/img2.png?raw=true"/>
   <h1>
       kennedy
   </h1> 
