--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -8,10 +8,10 @@
   <img src="../../img/img1.png"/>
   <img src="https://github.com/igamilton/my-project/blob/main/img/img2.png?raw=true"/>
   <h1>
-      kennedy
+      Hello World
   </h1> 
   <p>
-    мякярайнен
+    Hello World
   </p>
 
 </body>
