--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -5,8 +5,8 @@
     <title>Тестовая страничка</title>
 </head>
 <body>
-  <img src="../../img/img1.png"/>
-  <img src="https://github.com/igamilton/my-project/blob/main/img/img2.png?raw=true"/>
+  <img src="/my-project/img/img1.jpg" alt="абсалютный путь">
+  <img src="../../img/img2.jpg" alt="относительный путь">
   <h1>
       Hello World
   </h1> 
